# github-pr-monitor

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  docker.yaml  publish.yaml  release.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/adr/: 0001-architecture.md
src/: __init__.py  main.py
src/api/: __init__.py  github_client.py  models.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  auth_service.py  notification_service.py  pr_service.py  webhook_service.py
src/ui/: __init__.py  app.py
src/ui/components/: status_badge.py
src/ui/views/: __init__.py  pr_detail_view.py  pr_list_view.py  settings_view.py
src/utils/: __init__.py  keychain.py  rate_limiter.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
tests/: conftest.py
tests/unit/: test_auth_service.py  test_github_client.py  test_keychain.py  test_main.py  test_notification_service.py  test_pr_service.py  test_rate_limiter.py  test_settings.py  test_settings_persistence.py  test_ui_headless.py  test_web_app.py  test_webhook_service.py
