[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-pr-monitor"
version = "0.1.0"
description = "Web app to monitor and action GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "flask>=3.0.0",
  "keyring>=25.0.0",
  "PyJWT>=2.8.0",
  "PyGithub>=2.3.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "types-PyYAML",
  "types-requests",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["asyncio: async tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "ASYNC", "BLE"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
pretty = true
